--- a/frontend/src/app/restaurante-panel/restaurante-panel.html
+++ b/frontend/src/app/restaurante-panel/restaurante-panel.html
@@ -27,19 +27,19 @@
     <div class="flex flex-col space-y-3">
       <button
         (click)="mostrarVistaMenu()"
-        class="bg-yellow-500 hover:bg-yellow-600 text-white font-medium py-2 rounded-md transition"
+        class="bg-gradient-to-r from-yellow-300 to-yellow-500 hover:bg-yellow-600 text-white font-medium py-2 rounded-md transition"
       >
         Gestionar Menú de hoy
       </button>
       <button
         (click)="mostrarVistaPedidos()"
-        class="bg-blue-500 hover:bg-blue-600 text-white font-medium py-2 rounded-md transition"
+        class="bg-gradient-to-r from-blue-400 to-blue-600 hover:bg-blue-600 text-white font-medium py-2 rounded-md transition"
       >
         Pedidos de hoy ({{ pedidosHoy.length }})
       </button>
       <button
         (click)="mostrarVistaHistorial()"
-        class="bg-gray-600 hover:bg-gray-700 text-white font-medium py-2 rounded-md transition"
+        class="bg-gradient-to-r from-stone-300 to-stone-500 hover:bg-gray-700 text-white font-medium py-2 rounded-md transition"
       >
         Historial
       </button>
