--- a/frontend/src/app/auth/login/login.html
+++ b/frontend/src/app/auth/login/login.html
@@ -1,6 +1,6 @@
 <form (ngSubmit)="onSubmit()">
-  <input type="text" [(ngModel)]="username" name="username" placeholder="Usuario" required>
-  <input type="password" [(ngModel)]="password" name="password" placeholder="Contraseña" required>
-  <button type="submit">Iniciar sesión</button>
+  <input [(ngModel)]="username" name="username" placeholder="Usuario" required>
+  <input [(ngModel)]="password" name="password" type="password" placeholder="Contraseña" required>
+  <button type="submit">Ingresar</button>
   <div *ngIf="error" style="color:red">{{ error }}</div>
 </form>
